--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,6 +6,12 @@
         "use": "@vercel/node"
       }
     ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/server.js"
+      }
+    ],
     "headers": [
       {
         "source": "/predict",
@@ -15,12 +21,6 @@
           { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
           { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
         ]
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/server.js"
       }
     ]
 }
